2015-08-06  Kaz Kylheku  <kaz@kylheku.com>

	Suppress debug stepping into auto-loaded library code.

	* debug.c (debug_set_state, debug_restore_state): New functions.

	* debug.h (debug_state_t): New type.
	(debug_set_state, debug_restore_state): Declared, and defined
	as dummy macros in non-debug-support build.

	* lisplib.c (opt_dbg_autoload): New global variable.
	(lisplib_try_load): Disable or enable debugging around
	library loading based on opt_dbg_autoload option.

	* lisplib.h (opt_dbg_autoload): Declared.

	* txr.c (help): List --debug-autoload option.
	(no_dbg_support): New static function to avoid repeated code.
	(txr_main): Add debugger-autoload option. Change duplicate no debug
	support error messages into calls to no_dbg_support.

	* txr.1: Document --debug-autoload

2015-08-06  Kaz Kylheku  <kaz@kylheku.com>

	* txr.c (txr_main): Bugfix: debugger long option nonfunctional.

2015-08-06  Kaz Kylheku  <kaz@kylheku.com>

	Better diagnosis for loose @ forms.

	* eval.c (op_meta_error): New static function.
	(eval_init): Register sys:var and sys:expr as operators
	that throw error.

	* parser.y (sym_helper): Take parser_t instead of scanner_t
	argument so we have access to the name and line number.
	Obtain scanner internally from parser. Add source location
	info to (sys:var ...) form.
	(symhlpr): Retarget macro to pass parser rather than scanner to
	sm_helper.

2015-08-05  Kaz Kylheku  <kaz@kylheku.com>

	New filesystem object testing functions.

	* lisplib.c (path_test_set_entries, path_test_instantiate):
	New static functions.
	(dlt_register): Registered new functions to dl_table.

	* txr.1: Documented new functions.

	* share/txr/stdlib/path-test.tl: New file.

2015-08-05  Kaz Kylheku  <kaz@kylheku.com>

	Adding support for uid and gid manipulation.

	* configure: Added check for geteuid and related functions.

	* sysif.c (getuid_wrap, geteuid_wrap, getgid_wrap, getegid_wrap,
	getgroups_wrap, setuid_wrap, seteuid_wrap, setgid_wrap, setegid_wrap):